--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,11 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.0"
+    "react-router-dom": "^5.2.0",
+    "web-vitals": "^1.1.0",
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
+    "fontsource-roboto": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
