Added user register back end route.

--- a/package.json
+++ b/package.json
@@ -7,5 +7,6 @@
     "start": "node server/bin/www"
   },
   "author": "Darie-Dragos Mitoiu",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {}
 }
