--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,11 @@
     "web-vitals": "^1.1.0",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
-    "fontsource-roboto": "^4.0.0"
+    "fontsource-roboto": "^4.0.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
+    "react-redux": "^7.2.2",
+    "redux-devtools-extension": "^2.13.8"
   },
   "scripts": {
     "start": "react-scripts start",
