--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "cm4025-client",
   "version": "1.0.0",
   "private": true,
+  "proxy": "http://127.0.0.1:5000",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
@@ -17,7 +18,8 @@
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "react-redux": "^7.2.2",
-    "redux-devtools-extension": "^2.13.8"
+    "redux-devtools-extension": "^2.13.8",
+    "clsx": "^1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
