--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "react-router-dom": "^5.2.0",
     "web-vitals": "^1.1.0",
     "@material-ui/core": "^4.11.3",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "@material-ui/icons": "^4.11.2",
     "fontsource-roboto": "^4.0.0",
     "redux": "^4.0.5",
