--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@material-ui/core": "^4.11.3",
     "@material-ui/lab": "^4.0.0-alpha.57",
     "@material-ui/icons": "^4.11.2",
+    "react-material-ui-carousel": "^2.2.1",
     "fontsource-roboto": "^4.0.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
