--- a/client/package.json
+++ b/client/package.json
@@ -22,7 +22,8 @@
     "redux-thunk": "^2.3.0",
     "react-redux": "^7.2.2",
     "redux-devtools-extension": "^2.13.8",
-    "clsx": "^1.1.1"
+    "clsx": "^1.1.1",
+    "@chec/commerce.js": "^2.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
