--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node server/bin/www",
     "server": "nodemon server/bin/www",
     "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run server \" \"npm run client\""
+    "dev": "concurrently \"npm run server \" \"npm run client\"",
+    "heroku-post-build": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "author": "Darie-Dragos Mitoiu",
   "license": "ISC",
