Added material-ui demo carousel.

--- a/client/package.json
+++ b/client/package.json
@@ -23,7 +23,8 @@
     "react-redux": "^7.2.2",
     "redux-devtools-extension": "^2.13.8",
     "clsx": "^1.1.1",
-    "@chec/commerce.js": "^2.3.2"
+    "@chec/commerce.js": "^2.3.2",
+    "node-sass": "^5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
