--- a/package.json
+++ b/package.json
@@ -12,7 +12,16 @@
   },
   "author": "Darie-Dragos Mitoiu",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "dotenv": "^8.2.0",
+    "express": "~4.16.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.11.18",
+    "morgan": "~1.9.1"
+  },
   "devDependencies": {
     "concurrently": "^6.0.0",
     "nodemon": "^2.0.7"
